--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -654,7 +654,7 @@ Resources:
           bucket_images: !Ref S3Images
           bucket_transcripts: !Ref S3Transcripts
           aoss_host: !GetAtt VssCollection.CollectionEndpoint
-          bedrock_llm: !Ref BedrockLlmSonnet35
+          bedrock_llm: !Ref BedrockLlmNova
           image_embedding_model: !Ref BedrockImageEmbeddingModel
       Policies:
         - Version: 2012-10-17
